<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_blue">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_gravity="bottom"
        android:background="@drawable/bg_white_wavy_overlay" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="43dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="Login"
            android:textColor="@color/colorPrimaryWhite"
            android:textSize="42sp"
            android:textStyle="bold"
            android:typeface="sans"
            tools:ignore="ObsoleteLayoutParam" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryWhite"
            android:hint="Email"
            android:inputType="textWebEmailAddress"
            android:textColor="@color/colorPrimaryWhite"
            android:textColorHint="#80cecece" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryWhite"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryWhite"
            android:textColorHint="#80cecece" />

        <Button
            android:id="@+id/login"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@drawable/button_bordered_transparent"
            android:text="login"
            android:textColor="@color/colorPrimaryWhite" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_btgoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="55dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="5dp" />
    </LinearLayout>

    <Button
        android:id="@+id/register"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_gravity="bottom|left"
        android:layout_marginBottom="14dp"
        android:layout_marginStart="13dp"
        android:background="@drawable/button_main_style"
        android:text="signup"
        android:textColor="@color/colorPrimaryWhite" />
</FrameLayout>