<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_blue"
    tools:context="com.tl.discountsaroundme.activities.ItemDetailsActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:background="@drawable/bg_white_wavy_overlay"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgItem"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimaryWhite"
            android:scaleType="centerInside" />

        <TextView
            android:id="@+id/item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="ItemName"
            android:textColor="@color/colorPrimaryWhite"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/storeImage"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/marker_shop" />

            <TextView
                android:id="@+id/store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="StoreName"
                android:textColor="@color/colorPrimaryWhite" />

        </LinearLayout>

        <TextView
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:text="Type: "
            android:textColor="@color/colorPrimaryWhite" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:text="Description"
            android:textColor="@color/colorPrimaryWhite" />

    </LinearLayout>

    <!--Bottom-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="$"
                android:textAlignment="center"
                android:textColor="#0f0f0f"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/correctPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="$"
                android:textColor="@color/colorPrice"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/favoritesButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_main_style"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:text="Add to favorites"
                android:textColor="@color/colorPrimaryWhite"
                android:textSize="10sp" />

            <Button
                android:id="@+id/add_to_cart_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_main_style"
                android:drawableLeft="@drawable/ic_shopping_cart_add"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:text="Add to cart"
                android:textColor="@color/colorPrimaryWhite"
                android:textSize="10sp" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:layout_gravity="start|left"
        android:src="@drawable/ic_arrow_back_black_24dp"/>

</FrameLayout>