...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextDescription"
        android:layout_alignBottom="@+id/editTextDescription"
        android:layout_alignParentStart="true"
        android:layout_marginStart="22dp"
        android:text="Description:"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="194dp" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="wrap_content"
...
